--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
-    "@types/node": "20.7.2",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
     "@vercel/postgres": "^0.5.0",
@@ -53,6 +52,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/node": "^20.8.3",
     "@types/uuid": "^9.0.4"
   }
 }
