--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
+    "@vercel/kv": "^0.2.3",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
